<resources>
    <string name="app_name">FMR</string>
    <string name="title">Title</string>
    <string name="splash_image">Splash Image</string>
    <string name="icon">Icon</string>
    <string name="setting_edit_account">EDIT YOUR ACCOUNT</string>
    <string name="setting_profile_picture">Profile Picture</string>
    <string name="setting_name">Name</string>
    <string name="setting_dob">Date of Birth</string>
    <string name="setting_gender">Gender</string>
    <string name="setting_forgot_password">Forgot Password?</string>
    <string name="settings_saved">Settings saved</string>
    <string name="tagline">Your Medical Organizer</string>
    <string name="user_name">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="logging_in">Logging in</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_in_question">Already have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_question">Don\'t have an account?</string>
    <string name="create_now">Create Now</string>
    <string name="forgot_password_question">Forgot Password?</string>
    <string name="wrong_email_or_password">Email or Password is not found or mismatched</string>
    <string name="registration_success_message">Registration Succeeded. To continue, please click on the link sent to </string>
    <string name="find_your_email">Find Your Email</string>
    <string name="search">Search</string>
    <string name="signup_title">CREATE YOUR ACCOUNT</string>
    <string name="name">Name</string>
    <string name="first_name">First Name</string>
    <string name="first_name_wrong_format">Wrong first name format</string>
    <string name="last_name">Last Name</string>
    <string name="last_name_incorrect_format">Incorrect last name format</string>
    <string name="email_address">Email Address</string>
    <string name="email_address_incorrect_format">Incorrect email format</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="date_of_birth_required">Date of Birth is required</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_an_account">Create an account</string>
    <string name="legal_agreement_txt">By clicking Create an Account, you agree to our</string>
    <string name="terms">Terms</string>
    <string name="password_wrong_format">Wrong password format, min 6 letters, max 50 letters</string>
    <string name="password_wrong_confirmation">Password does not match</string>
    <string name="email_registered">Email has already been registered</string>
    <string name="step_1_allergy">STEP 1 - ALLERGY</string>
    <string name="any_allergy_question">Do you have any allergies?</string>
    <string name="add_allergy">Add New Allergy</string>
    <string name="step_2_disease">STEP 2 - DISEASE</string>
    <string name="step_3_medication">STEP 3 - MEDICATION</string>
    <string name="step_4_miscellaneous">STEP 4 - MISCELLANEOUS</string>
    <string name="skip_to_summary">Skip to Summary</string>
    <string name="skip_to_summary_progress_mssg">Finishing your registration..</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="step">Step</string>
    <string name="agent">Agent</string>
    <string name="placeholder_agent">Agent Placeholder</string>
    <string name="causative_agent">Causative Agent</string>
    <string name="causative_agent_empty">Causative Agent can not be Empty</string>
    <string name="drug_allergy">Drug Allergy</string>
    <string name="placeholder_drug_allergy">Drug Allergy Placeholder</string>
    <string name="agent_drug_type_question">Is the agent a drug type?</string>
    <string name="reaction">Reaction</string>
    <string name="placeholder_reaction">Reaction Placeholder</string>
    <string name="reaction_hint">Such as hives, itching, nasal congestion, etc.</string>
    <string name="reaction_empty">Reaction can not be Empty</string>
    <string name="first_time_experience">First Time Experience</string>
    <string name="placeholder_first_time_experience">First Time Experience Placeholder</string>
    <string name="first_time_experience_opt">First Time Experience - Optional</string>
    <string name="first_time_experience_hint">A full date or approximate date or vague answer such as : years ago, childhood, etc.</string>
    <string name="add">Add</string>
    <string name="add_disease">Add New Disease</string>
    <string name="add_medication">Add New Medication</string>
    <string name="drawer">Drawer</string>
    <string name="drawer_toggle">Drawer Toggle</string>
    <string name="summary">Summary</string>
    <string name="my_id_card">My ID Card</string>
    <string name="visit_management">Visit Management</string>
    <string name="visit_management_caps">VISIT MANAGEMENT</string>
    <string name="surgery_management">Surgery Management</string>
    <string name="surgery_management_caps">SURGERY MANAGEMENT</string>
    <string name="allergy_management">Allergy Management</string>
    <string name="allergy_management_caps">ALLERGY MANAGEMENT</string>
    <string name="disease_management">Disease Management</string>
    <string name="disease_management_caps">DISEASE MANAGEMENT</string>
    <string name="medicine_management">Medicine Management</string>
    <string name="medicine_management_caps">MEDICINE MANAGEMENT</string>
    <string name="accident_history_management">Accident History Management</string>
    <string name="accident_history_management_caps">ACCIDENT HISTORY MANAGEMENT</string>
    <string name="lab_result_management">Lab Result Management</string>
    <string name="lab_result_management_caps">LAB RESULT MANAGEMENT</string>
    <string name="misc_management">Misc. Management</string>
    <string name="misc_management_caps">MISC. MANAGEMENT</string>
    <string name="help">Help</string>
    <string name="logout">Logout</string>
    <string name="placeholder_name">Fast Med Dev Name</string>
    <string name="placeholder_gender">Gender</string>
    <string name="photo">Photo</string>
    <string name="medicine_colon">Medicine :</string>
    <string name="medicine_form_colon">Form :</string>
    <string name="medicine_route_colon">Route :</string>
    <string name="medicine_dose_colon">Dose :</string>
    <string name="medicine_frequency_colon">Frequency :</string>
    <string name="your_profile">Your Profile</string>
    <string name="recent_visits">Recent Visits</string>
    <string name="medicines">Medicines</string>
    <string name="family_anamesy">Family Anamesy</string>
    <string name="ongoing_disease">Ongoing Disease</string>
    <string name="drug_allergies">Drug Allergies</string>
    <string name="voluptuary_habits">Voluptuary Habits</string>
    <string name="voluptuary_habits_not_found">No Voluptuary Habits</string>
    <string name="allergy_agent_colon">Allergy Agent :</string>
    <string name="allergy_reaction_colon">Reaction :</string>
    <string name="visit_date">Date :</string>
    <string name="visit_place">Hospital :</string>
    <string name="visit_doctor">Doctor :</string>
    <string name="visit_image">Image :</string>
    <string name="anamnesy_colon">Disease :</string>
    <string name="anamnesy_heriditiary_carrier">Heriditiary Carrier :</string>
    <string name="anamesy_not_found">No Family Anamesy record</string>
    <string name="disease_colon">Disease :</string>
    <string name="disease_last_visit">Last Visit :</string>
    <string name="disease_date">Date :</string>
    <string name="ongoing_disease_not_found">No Ongoing Disease record</string>
    <string name="idcard_uploaded">ID Card has been uploaded</string>
    <string name="visiting_date">Visiting Date</string>
    <string name="placeholder_date">10/20/2017</string>
    <string name="placeholder_hospital_name">RS Soliam Mangunkusumo</string>
    <string name="doctor_name">Doctor Name</string>
    <string name="doctor_name_placeholder">Sisilia Yudhakusuma</string>
    <string name="doctor_name_required">Doctor name is required</string>
    <string name="hospital_name">Hospital Name</string>
    <string name="diagnose">Diagnose</string>
    <string name="image_upload">Upload Image</string>
    <string name="disease_name">Disease name</string>
    <string name="disease_name_hint">Exact name of diseases</string>
    <string name="disease_hereditary_question">Is it hereditary?</string>
    <string name="disease_hereditary_inherited_from">From whom your hereditary diseases is inherited?</string>
    <string name="disease_hereditary_inherited_from_hint">Father, mother, grandfather, etc.</string>
    <string name="ongoing">Ongoing</string>
    <string name="historic_date">Historic date</string>
    <string name="approximate_date">Approximate Date</string>
    <string name="medicine_name">Medicine Name</string>
    <string name="medicine_name_hint">Exact name of medicine</string>
    <string name="medicine_form">Medicine Form</string>
    <string name="medicine_form_hint">Capsules, drops, tablets, etc.</string>
    <string name="medicine_administration_method">Method of Administration</string>
    <string name="medicine_administration_method_hint">Oral, infusion, via nebuliser, via NG tube or site of use (eg, \'to wound\', to \'left eye\', etc.)</string>
    <string name="medicine_administration_dose">Dose per Administration</string>
    <string name="medicine_administration_dose_hint">Units of measurement, number of tablets, volume of liquid, etc.</string>
    <string name="medicine_frequency">Medicine Frequency</string>
    <string name="medicine_frequency_hint">Frequency of taking administration (one time a day, three times a week, etc.)</string>
    <string name="medication_reason">Reason for Medication - Optional</string>
    <string name="medication_reason_hint">Reason for medication being prescribed, where known.</string>
    <string name="medication_status">Medication Status - Optional</string>
    <string name="medication_status_hint">Started, stopped, suspended or reinstated with record date for each change in status</string>
    <string name="additional_instruction">Additional Instruction - Optional</string>
    <string name="additional_instruction_hint">Requirements for adherence support or additional information about specific medicines</string>
    <string name="surgery_procedure">Surgery Procedure</string>
    <string name="surgery_procedure_hint">Surgery procedure name</string>
    <string name="physician_name">Physician Name</string>
    <string name="physician_name_hint">Physician / Doctor name</string>
    <string name="hospital_name_hint">Hospital name</string>
    <string name="date">Date</string>
    <string name="surgery_date">Surgery Date</string>
    <string name="surgery_note">Surgery Note</string>
    <string name="surgery_note_hint">Notes for surgery</string>
    <string name="lab_test_type_question">What was the type of test?</string>
    <string name="lab_test_type_question_hint">Test name (eg. Blood checking, etc)</string>
    <string name="lab_test_location_question">Where did you take the test?</string>
    <string name="lab_test_location_question_hint">Place name (eg. Hospital, etc)</string>
    <string name="lab_test_description_question">What is the description of the test?</string>
    <string name="lab_test_description_question_hint">Description (eg. Routine checkup, etc)</string>
    <string name="lab_test_date_question">When was the testing done?</string>
    <string name="lab_test_date_question_hint">Testing date</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="or">Or</string>
    <string name="create">Create</string>
    <string name="back">Back</string>
</resources>