<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="RtlHardcoded"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/default_activity_content_padding">

    <!-- Disease Name -->
    <com.med.fast.customviews.CustomFontTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/disease_name"
        android:textColor="@color/blackDark" />

    <com.med.fast.customviews.CustomFontEditText
        android:id="@+id/disease_popup_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@drawable/border_edittext_grey_selector"
        android:hint="@string/disease_name_hint"
        android:textSize="@dimen/font_small" />

    <!-- Hereditary y/n -->
    <com.med.fast.customviews.CustomFontTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/disease_hereditary_question"
        android:textColor="@color/blackDark" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.med.fast.customviews.CustomFontRadioButton
            android:id="@+id/disease_popup_hereditary_y_rb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yes"/>

        <com.med.fast.customviews.CustomFontRadioButton
            android:id="@+id/disease_popup_hereditary_n_rb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/no"/>
        
    </RadioGroup>

    <!-- Inherited from -->
    <com.med.fast.customviews.CustomFontTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/disease_hereditary_inherited_from"
        android:textColor="@color/blackDark" />

    <com.med.fast.customviews.CustomFontEditText
        android:id="@+id/disease_popup_inherited_from"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@drawable/border_edittext_grey_selector"
        android:hint="@string/disease_hereditary_inherited_from_hint"
        android:gravity="start"
        android:textSize="@dimen/font_small" />

    <!-- Currently having this disease y/n -->
    <com.med.fast.customviews.CustomFontTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/ongoing"
        android:textColor="@color/blackDark" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.med.fast.customviews.CustomFontRadioButton
            android:id="@+id/disease_popup_currently_having_y_rb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yes"/>

        <com.med.fast.customviews.CustomFontRadioButton
            android:id="@+id/disease_popup_currently_having_n_rb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/no"/>

    </RadioGroup>

    <!-- Date -->
    <com.med.fast.customviews.CustomFontTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/historic_date"
        android:textColor="@color/blackDark" />

    <com.med.fast.customviews.CustomFontTextView
        android:id="@+id/disease_popup_historic_date_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@drawable/border_edittext_grey_selector"
        android:textColor="@color/blackDark"
        android:textSize="@dimen/font_small"
        android:hint="@string/historic_date"/>

    <com.med.fast.customviews.CustomFontTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/or"
        android:textColor="@color/blackDark" />

    <com.med.fast.customviews.CustomFontTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/approximate_date"
        android:textColor="@color/blackDark" />

    <Spinner
        android:id="@+id/disease_popup_date_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15dp"
        android:layout_gravity="end"
        android:gravity="end">

        <com.med.fast.customviews.CustomFontButton
            android:id="@+id/disease_popup_back_btn"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/btnMediumHeight"
            android:background="@drawable/button_ltgrey_grey"
            android:layout_marginRight="10dp"
            android:text="@string/back"
            android:textColor="@color/black"/>

        <com.med.fast.customviews.CustomFontButton
            android:id="@+id/disease_popup_create_btn"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/btnMediumHeight"
            android:text="@string/create"
            android:background="@drawable/button_toscalight_tosca"
            android:textColor="@color/textcolor_white_to_tosca"/>

    </LinearLayout>

</LinearLayout>